fix: avoid external css on email 4

--- a/4-autohtml-project/index.html
+++ b/4-autohtml-project/index.html
@@ -6,8 +6,772 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
+  <!-- <link rel="stylesheet" href="./style.css"> -->
 
+  <style>
+    .email-1-v-1-inactive-email-5,
+    .email-1-v-1-inactive-email-5 * {
+      box-sizing: border-box;
+    }
+
+    .email-1-v-1-inactive-email-5 {
+      background: linear-gradient(to left, #ffffff, #ffffff),
+        linear-gradient(to left, #113765, #113765);
+      height: 1146px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .pexels-anna-shvets-3845738-1 {
+      background: #f2faff;
+      width: 601px;
+      height: 145px;
+      position: absolute;
+      left: -1px;
+      top: 483px;
+      transform-origin: 0 0;
+      transform: rotate(0deg) scale(1, -1);
+    }
+
+    .group-5888 {
+      position: absolute;
+      inset: 0;
+    }
+
+    .image-46 {
+      width: 76px;
+      height: 8.94px;
+      position: absolute;
+      left: 25px;
+      top: 12.83px;
+      object-fit: cover;
+    }
+
+    .frame-170 {
+      display: flex;
+      flex-direction: row;
+      gap: 11px;
+      align-items: flex-start;
+      justify-content: flex-start;
+      position: absolute;
+      left: 36px;
+      top: 233px;
+    }
+
+    .frame-188 {
+      display: flex;
+      flex-direction: column;
+      gap: 11px;
+      align-items: center;
+      justify-content: flex-start;
+      flex-shrink: 0;
+      position: relative;
+    }
+
+    .button-email {
+      background: #0067b6;
+      border-radius: 100px;
+      border-style: solid;
+      border-color: rgba(255, 255, 255, 0.2);
+      border-width: 2px;
+      padding: 10px 20px 10px 20px;
+      display: flex;
+      flex-direction: row;
+      gap: 0px;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      width: 184px;
+      height: 38px;
+      position: relative;
+    }
+
+    .frame-126 {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      position: relative;
+    }
+
+    .send-us-your-feedback {
+      color: #ffffff;
+      text-align: left;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 11px;
+      font-weight: 700;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
+    .arrow-3 {
+      flex-shrink: 0;
+      width: 11px;
+      height: 0px;
+      position: relative;
+      transform: translate(-0.5px, -3.68px);
+      overflow: visible;
+    }
+
+    .hello-first-name-we-haven-t-seen-you-in-a-while {
+      text-align: left;
+      position: absolute;
+      left: 36px;
+      top: 116px;
+      width: 324px;
+      height: 101px;
+    }
+
+    .hello-first-name-we-haven-t-seen-you-in-a-while-span {
+      color: #04537b;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 16px;
+      line-height: 130.72%;
+      font-weight: 700;
+    }
+
+    .hello-first-name-we-haven-t-seen-you-in-a-while-span2 {
+      color: #e85d75;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 16px;
+      line-height: 130.72%;
+      font-weight: 700;
+    }
+
+    .hello-first-name-we-haven-t-seen-you-in-a-while-span3 {
+      color: #fa00ff;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 16px;
+      line-height: 130.72%;
+      font-weight: 700;
+    }
+
+    .hello-first-name-we-haven-t-seen-you-in-a-while-span4 {
+      color: #04537b;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 20px;
+      line-height: 130.72%;
+      font-weight: 700;
+    }
+
+    .rectangle-1265 {
+      width: 600px;
+      height: 99px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+    }
+
+    .group-5964 {
+      position: absolute;
+      inset: 0;
+    }
+
+    .rectangle-1275 {
+      background: #0067b6;
+      border-radius: 1000px;
+      width: 381.22px;
+      height: 185.62px;
+      position: absolute;
+      left: 255.55px;
+      top: 435.26px;
+      transform-origin: 0 0;
+      transform: rotate(-60deg) scale(1, 1);
+    }
+
+    .rectangle-1276 {
+      background: #f2faff;
+      width: 59px;
+      height: 112.62px;
+      position: absolute;
+      left: 581.04px;
+      top: 245.99px;
+      transform-origin: 0 0;
+      transform: rotate(31.798deg) scale(1, 1);
+    }
+
+    .pexels-anna-shvets-3845738-2 {
+      background: #f2faff;
+      width: 601px;
+      height: 158px;
+      position: absolute;
+      left: -1px;
+      top: 338px;
+    }
+
+    .frame-141 {
+      display: flex;
+      flex-direction: column;
+      gap: 9px;
+      align-items: center;
+      justify-content: flex-start;
+      width: 351px;
+      height: 88px;
+      position: absolute;
+      left: 128px;
+      top: 378px;
+    }
+
+    .frame-140 {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
+      justify-content: flex-start;
+      flex-shrink: 0;
+      width: 358px;
+      height: 21px;
+      position: relative;
+    }
+
+    .rectangle-1227 {
+      border-style: solid;
+      border-color: #e44c57;
+      border-width: 1px;
+      width: 142px;
+      height: 43px;
+      position: absolute;
+      left: 198px;
+      top: 1063px;
+    }
+
+    .https-www-bauschhealth-com-privacy-policy {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 10px;
+      font-weight: 400;
+      position: absolute;
+      left: 198px;
+      top: 1063px;
+      width: 142px;
+      height: 34px;
+    }
+
+    .rectangle-1222 {
+      border-style: solid;
+      border-color: #e44c57;
+      border-width: 1px;
+      width: 142px;
+      height: 45px;
+      position: absolute;
+      left: 345px;
+      top: 1060px;
+    }
+
+    .https-www-bauschhealth-com-terms {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 10px;
+      font-weight: 400;
+      text-decoration: underline;
+      position: absolute;
+      left: 345px;
+      top: 1060px;
+      width: 142px;
+      height: 34px;
+    }
+
+    .rectangle-1226 {
+      border-style: solid;
+      border-color: #e44c57;
+      border-width: 1px;
+      width: 142px;
+      height: 43px;
+      position: absolute;
+      left: 34px;
+      top: 1063px;
+    }
+
+    .https-go-orapharma-com-orapharma-preferences-hcp-existing-html {
+      color: #000000;
+      text-align: left;
+      font-family: "Inter-Regular", sans-serif;
+      font-size: 10px;
+      font-weight: 400;
+      position: absolute;
+      left: 34px;
+      top: 1063px;
+      width: 142px;
+      height: 34px;
+    }
+
+    .group-5979 {
+      position: absolute;
+      inset: 0;
+    }
+
+    .footer {
+      width: 600px;
+      height: 223px;
+      position: absolute;
+      left: 0px;
+      top: 818px;
+    }
+
+    .mask-group {
+      height: auto;
+      position: absolute;
+      left: 0px;
+      top: 223px;
+      transform: translate(0px, -223px);
+      overflow: visible;
+    }
+
+    .frame-154 {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      align-items: flex-start;
+      justify-content: flex-start;
+      width: 521px;
+      height: 36.77%;
+      position: absolute;
+      left: calc(50% - 260px);
+      bottom: 41.7%;
+      top: 21.52%;
+    }
+
+    .frame-169 {
+      background: #113765;
+      padding: 25px 0px 0px 0px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      align-items: center;
+      justify-content: flex-end;
+      width: 600px;
+      height: 357px;
+      position: absolute;
+      left: 0px;
+      top: 483px;
+    }
+
+    .rectangle-12752 {
+      border-radius: 1000px;
+      flex-shrink: 0;
+      width: 381.22px;
+      height: 185.62px;
+      position: relative;
+      transform-origin: 0 0;
+      transform: rotate(-42.977deg) scale(1, 1);
+    }
+
+    .frame-196 {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      align-items: flex-start;
+      justify-content: center;
+      width: 334px;
+      position: absolute;
+      left: 61px;
+      top: 547px;
+    }
+
+    .your-dedication-to-patient-care-excellence-is-what-sets-you-apart-and-we-re-here-to-support-you-every-step-of-the-way {
+      color: #ffffff;
+      text-align: left;
+      font-family: "DmSans-Medium", sans-serif;
+      font-size: 20px;
+      font-weight: 500;
+      position: relative;
+      width: 327px;
+    }
+
+    .warm-regards-jessica-giebel-senior-manager-of-professional-education {
+      color: #ffffff;
+      text-align: left;
+      font-family: "-", sans-serif;
+      font-size: 11px;
+      font-weight: 400;
+      position: relative;
+      width: 268px;
+    }
+
+    .warm-regards-jessica-giebel-senior-manager-of-professional-education-span {
+      color: #ffffff;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 11px;
+      font-weight: 700;
+    }
+
+    .warm-regards-jessica-giebel-senior-manager-of-professional-education-span2 {
+      color: #ffffff;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 11px;
+      font-weight: 400;
+    }
+
+    .group-5974 {
+      width: 624.22px;
+      height: 468.69px;
+      position: static;
+    }
+
+    .rectangle-1278 {
+      background: #0067b6;
+      border-radius: 1000px;
+      width: 422.2px;
+      height: 189.51px;
+      position: absolute;
+      left: 249px;
+      top: 926.95px;
+      transform-origin: 0 0;
+      transform: rotate(-60deg) scale(1, 1);
+    }
+
+    .group-6046-jess {
+      width: 175.42px;
+      height: 175.42px;
+      position: static;
+    }
+
+    .ellipse-66 {
+      background: #a9cbf4;
+      border-radius: 50%;
+      width: 175.42px;
+      height: 175.42px;
+      position: absolute;
+      left: 406.59px;
+      top: 602.52px;
+    }
+
+    .mask-group2 {
+      width: 175.42px;
+      height: 175.42px;
+      position: static;
+    }
+
+    .ellipse-67 {
+      background: #349bde;
+      border-radius: 50%;
+      width: 175.42px;
+      height: 175.42px;
+      position: absolute;
+      left: 406.59px;
+      top: 602.52px;
+    }
+
+    .rectangle-1277 {
+      background: #ffffff;
+      width: 600px;
+      height: 189px;
+      position: absolute;
+      left: 0px;
+      top: 841px;
+    }
+
+    .frame-153 {
+      display: flex;
+      flex-direction: row;
+      gap: 22px;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      left: 40px;
+      top: 866px;
+    }
+
+    .image-50 {
+      flex-shrink: 0;
+      width: 119px;
+      height: 14px;
+      position: relative;
+      object-fit: cover;
+    }
+
+    .tm-are-trademarks-of-bausch-health-companies-inc-or-its-affiliates-2024-bausch-health-companies-inc-or-its-affiliates-ora-0024-usa-24 {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+      width: 385px;
+    }
+
+    .frame-156 {
+      display: flex;
+      flex-direction: row;
+      gap: 8px;
+      align-items: flex-start;
+      justify-content: flex-start;
+      position: absolute;
+      left: 40px;
+      top: 905px;
+    }
+
+    .ora-pharma {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+    }
+
+    .div {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+    }
+
+    ._400-somerset-corporate-blvd {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+    }
+
+    .bridgewater {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+    }
+
+    .bridgewater-span {
+      color: #000000;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+    }
+
+    .bridgewater-span2 {
+      color: #000000;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      text-decoration: underline;
+    }
+
+    .new-jersey {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+    }
+
+    ._08807 {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: relative;
+    }
+
+    .this-email-was-sent-to-because-you-requested-to-receive-marketing-messages-from-ora-pharma-if-you-no-longer-wish-to-receive-emails-you-can-update-your-email-preferences-below-please-do-not-reply-to-this-email-if-you-have-questions-related-to-our-products-contact-our-customer-care-at-866-273-7846 {
+      color: #000000;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      position: absolute;
+      left: 40px;
+      top: 932px;
+      width: 521px;
+    }
+
+    .frame-155 {
+      display: flex;
+      flex-direction: row;
+      gap: 8px;
+      align-items: flex-start;
+      justify-content: flex-start;
+      position: absolute;
+      left: 40px;
+      top: 995px;
+    }
+
+    .unsubscribe-or-update-email-preferences {
+      color: #113765;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      text-decoration: underline;
+      position: relative;
+    }
+
+    .privacy-policy {
+      color: #113765;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      text-decoration: underline;
+      position: relative;
+    }
+
+    .legal-notice {
+      color: #113765;
+      text-align: left;
+      font-family: "DmSans-Regular", sans-serif;
+      font-size: 9px;
+      font-weight: 400;
+      text-decoration: underline;
+      position: relative;
+    }
+
+    .group-6000 {
+      position: absolute;
+      inset: 0;
+    }
+
+    .group-5995 {
+      width: 22.58px;
+      height: 25.68px;
+      position: absolute;
+      left: 53.73px;
+      top: 72.64px;
+      overflow: visible;
+    }
+
+    .oracademy-logo-1-2 {
+      width: 169px;
+      height: 56.7px;
+      position: absolute;
+      left: 35px;
+      top: 59.04px;
+      object-fit: cover;
+    }
+
+    .adobe-stock-334279719-removebg-preview-1-1 {
+      width: 308px;
+      height: 249px;
+      position: absolute;
+      left: 347px;
+      top: 89px;
+      object-fit: cover;
+    }
+
+    .we-are-continually-updating-and-improving-the-content-available-on-or-academy-but-we-d-love-to-get-your-feedback-and-if-there-s-anything-you-think-we-could-be-doing-better {
+      color: #113765;
+      text-align: left;
+      font-family: "DmSans-Medium", sans-serif;
+      font-size: 10px;
+      font-weight: 500;
+      position: absolute;
+      left: 36px;
+      top: 176px;
+      width: 294px;
+    }
+
+    .your-membership-with-or-academy-entitles-you-to-free-instant-access-to-a-range-of-educational-resources-to-stay-up-to-date-with-continuously-updating-content-created-by-industry-leading-professionals-in-dental-health-and-so-much-more {
+      color: #113765;
+      text-align: left;
+      font-family: "-", sans-serif;
+      font-size: 10px;
+      font-weight: 400;
+      position: absolute;
+      left: 130px;
+      top: 383px;
+      width: 347px;
+    }
+
+    .your-membership-with-or-academy-entitles-you-to-free-instant-access-to-a-range-of-educational-resources-to-stay-up-to-date-with-continuously-updating-content-created-by-industry-leading-professionals-in-dental-health-and-so-much-more-span {
+      color: #113765;
+      font-family: "DmSans-Medium", sans-serif;
+      font-size: 10px;
+      font-weight: 500;
+    }
+
+    .your-membership-with-or-academy-entitles-you-to-free-instant-access-to-a-range-of-educational-resources-to-stay-up-to-date-with-continuously-updating-content-created-by-industry-leading-professionals-in-dental-health-and-so-much-more-span2 {
+      color: #113765;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 10px;
+      font-weight: 700;
+    }
+
+    .your-membership-with-or-academy-entitles-you-to-free-instant-access-to-a-range-of-educational-resources-to-stay-up-to-date-with-continuously-updating-content-created-by-industry-leading-professionals-in-dental-health-and-so-much-more-span3 {
+      color: #113765;
+      font-family: "DmSans-Medium", sans-serif;
+      font-size: 10px;
+      font-weight: 500;
+    }
+
+    .frame-197 {
+      display: flex;
+      flex-direction: row;
+      gap: 11px;
+      align-items: flex-start;
+      justify-content: flex-start;
+      width: 241px;
+      position: absolute;
+      left: 61px;
+      top: 737px;
+    }
+
+    .button-email2 {
+      background: #0067b6;
+      border-radius: 100px;
+      border-width: 2px;
+      border-style: solid;
+      border-image: var(--box-glow,
+          linear-gradient(140.3deg,
+            rgba(255, 255, 255, 0.2) 12.58855015039444%,
+            rgba(255, 255, 255, 0) 17.31865257024765%,
+            rgba(255, 255, 255, 0.1) 73.72748851776123%));
+      border-image-slice: 1;
+      padding: 10px 20px 10px 20px;
+      display: flex;
+      flex-direction: row;
+      gap: 0px;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      width: 241px;
+      height: 38px;
+      position: relative;
+    }
+
+    .reconnect-with-or-academy-now {
+      color: #ffffff;
+      text-align: left;
+      font-family: "DmSans-Bold", sans-serif;
+      font-size: 11px;
+      font-weight: 700;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
+    .arrow-32 {
+      flex-shrink: 0;
+      width: 11px;
+      height: 0px;
+      position: relative;
+      transform: translate(-0.5px, -3.68px);
+      overflow: visible;
+    }
+
+    .adobe-stock-654510334-2 {
+      border-radius: 1000px;
+      width: 174px;
+      height: 190px;
+      position: absolute;
+      left: 407px;
+      top: 588px;
+      object-fit: cover;
+    }
+  </style>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
