fix: adjust  email 5

--- a/5_Group_9451_Code/index.html
+++ b/5_Group_9451_Code/index.html
@@ -267,10 +267,10 @@
                                       style="background: url('assets/table__hqi0l1_13cbc7.png') 50% / 100% no-repeat; width: 100%; height: 196px; border-spacing: 0"> -->
                                     <table background="assets/table__hqi0l1_62bd97.png" alt="Image" cellpadding="0"
                                       cellspacing="0" border="0" role="presentation" align="center" width="100%"
-                                      height="196" style="border-spacing: 0">
+                                      height="196" style="border-spacing: 0; border: white 2px solid;">
                                       <tr>
                                         <td align="left" valign="top" height="85.43"
-                                          style="padding-top: 110.57px; padding-left: 391.79px; height: 85.43px; mso-padding-left-alt: 0; margin-left: 391.79px">
+                                          style="padding-top: 110.57px; padding-left: 391.79px; height: 85.43px; mso-padding-left-alt: 0; margin-left: 391.79px; ">
                                           <table cellpadding="0" cellspacing="0" border="0" role="presentation"
                                             style="margin: 0; border-spacing: 0">
                                             <tr>
@@ -278,13 +278,13 @@
                                                 <img src="assets/img_46_1078_eda826.png"
                                                   alt="a blurry picture of the word by on a white background."
                                                   width="16.00" height="13.00"
-                                                  style="width: 16px; height: 13px; display: block" />
+                                                  style="width: 16px; height: 13px; display: block;" />
                                               </td>
-                                              <td valign="top" style="padding-left: 4.64px">
+                                              <td valign="top" style="padding-left: 4.64px;">
                                                 <img src="assets/img_46_1077_ee3e0a.png"
                                                   alt="the word pharma is written in blue on a white background"
                                                   width="91"
-                                                  style="border: none; max-width: initial; object-fit: contain; width: 91px; mix-blend-mode: normal; display: block" />
+                                                  style="border: none; max-width: initial; object-fit: contain; width: 91px; mix-blend-mode: normal; display: block; " />
                                               </td>
                                             </tr>
                                           </table>
