--- a/5_Group_9451_Code/index.html
+++ b/5_Group_9451_Code/index.html
@@ -230,8 +230,7 @@
   </div>
   <center lang="en" dir="ltr"
     style="width: 100%; table-layout: fixed; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%">
-    <table cellpadding="0" cellspacing="0" border="0" role="presentation"
-      style="margin: 0; border-spacing: 0; border: 2px solid green;">
+    <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="margin: 0; border-spacing: 0;">
       <tr>
         <td valign="top" width="602" style="width: 602px">
           <table cellpadding="0" cellspacing="0" border="0" role="presentation" width="100.00%"
