make email 3 centered

--- a/3-autohtml-project/index.html
+++ b/3-autohtml-project/index.html
@@ -18,8 +18,13 @@
       background: linear-gradient(to left, #ffffff, #ffffff),
         linear-gradient(to left, #113765, #113765);
       height: 1454px;
-      position: relative;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
       overflow: hidden;
+
+      overflow: hidden;
+      width: 600px;
     }
 
     .linked-in-post {
