fix hello firstname section on gmail

--- a/1_Group_9441_Code/index-gpt.html
+++ b/1_Group_9441_Code/index-gpt.html
@@ -265,27 +265,18 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <a target="_blank" rel="noopener noreferrer"
-                                                        href="https://www.oracademy.com">
-
-                                                        <td align="left"
-                                                            style="padding-top: 12.5px; padding-bottom: 5.9px; padding-left: 120.5px">
-                                                            <p
-                                                                style="color: #113765; margin: 0; padding: 0; line-height: 21px;">
-                                                                <span
-                                                                    style="font-size: 18px; font-weight: bold; text-align: left;">Hello</span>
-                                                                <span
-                                                                    style="font-size: 16px; font-weight: 700; color: magenta; text-align: left;">&lt;first
-                                                                    name&gt;</span>
-                                                            </p>
-                                                        </td>
-                                                    </a>
-                                                </tr>
-                                                <tr>
                                                     <td align="left"
                                                         style="padding-top: 5.9px; padding-bottom: 6.9px; padding-left: 121px">
+                                                        <p
+                                                            style="color: #113765; margin: 0; padding: 0; line-height: 21px;">
+                                                            <span
+                                                                style="font-size: 18px; font-weight: bold; text-align: left;">Hello</span>
+                                                            <span
+                                                                style="font-size: 16px; font-weight: 700; color: magenta; text-align: left;">&lt;first
+                                                                name&gt;</span>
+                                                        </p>
                                                         <p class="color-113765" width="357"
-                                                            style="font-size: 10px; font-weight: 400; text-align: left; color: #113765; margin: 0; padding: 0; width: 357px">
+                                                            style="font-size: 10px; font-weight: 400; text-align: left; color: #113765; margin: 0; padding: 0; width: 357px; margin-top: 13px;">
                                                             <span
                                                                 style="font-size: 11px; font-weight: 900; text-align: left">Welcome
                                                                 to
